--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "@sentry/browser": "^4.3.4",
     "@sentry/node": "^4.3.4",
-    "consola": "^1.4.3"
+    "consola": "^1.4.3",
+    "shvl": "^1.3.1"
   },
   "devDependencies": {
     "nuxt-module-builder": "latest"
