--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/sentry",
-  "version": "2.1.0",
+  "version": "2.3.1",
   "description": "Sentry module for Nuxt.js",
   "license": "MIT",
   "contributors": [
@@ -34,14 +34,13 @@
     ]
   },
   "dependencies": {
-    "@sentry/browser": "^4.3.4",
-    "@sentry/node": "^4.3.4",
-    "consola": "^1.4.3",
+    "@sentry/browser": "^4.5.1",
+    "@sentry/node": "^4.5.1",
+    "@sentry/webpack-plugin": "^1.6.2",
+    "consola": "^2.3.2",
     "shvl": "^1.3.1"
   },
-  "devDependencies": {
-    "nuxt-module-builder": "latest"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "nuxt": "<1.0.0 || >1.2.1"
   }
